fixed list overlap styling issue on my profile

--- a/main.css
+++ b/main.css
@@ -74,3 +74,7 @@ ol li {
 .is-logged-in {
     color: #BC7C69;
 }
+
+.mb-4:hover {
+    background-color: #acacac;
+}
