--- a/queries.css
+++ b/queries.css
@@ -3,7 +3,9 @@ html, body, .webpage {
     height: 100%;
 }
 
-body {  
+body {
+    /* background-color: #313653; */
+    
     background: url("images/Pluma_bluegreen.svg") center center fixed;
 
 }
@@ -15,19 +17,32 @@ body {
     background-color: white;
 }
 
-/* #title-container {
+#title-container {
     display: inline-flex;
     flex-direction: row;
     padding-top: 20px;
     padding-bottom: 20px;
     align-items: flex-end;
     justify-content: start;
+    /* align-content: space-around; */
     width: 100%;
+    /* margin: 0 100px; */
     background-color: white;
-} */
+}
 
 #title-div {
+    /* background: gray; */
     width: 50%;
+    margin: 0 30px;
+}
+#button-div {
+    /* background: gray; */
+    width: 60%;
+    margin: 0 30px;
+}
+#message-div {
+    /* background: gray; */
+    width: 60%;
     margin: 0 30px;
 }
 
@@ -36,22 +51,31 @@ div#title-div > h2 {
     margin-bottom: auto;
 }
 
+#join-button {
+    /* margin-bottom: auto; */
+    border-radius: 8px;
+    width: 100px;
+}
+
+#already-message {
+    margin-bottom: auto;
+}
 
 ol {
-    /* display: grid;
+    /* list-style-type: none; */
+    /* list-style: none; */
+    /* padding: 0px; */
+    display: grid;
     grid-auto-flow: column;
-    grid-template-rows: repeat(10, 0.1fr); */
-    padding-top: 20px;
-
+    grid-template-rows: repeat(10, 1fr);
 }
 
 ol li {
     counter-increment: list;
     list-style-type: none;
     position: relative;
-
   }
- 
+  
   ol li:before {
     color: #acacac;
     content: counter(list) ".";
@@ -59,7 +83,6 @@ ol li {
     position: absolute;
     text-align: right;
     width: 26px;
-
   }
 
 
@@ -79,12 +102,3 @@ ol li {
     border-bottom: 2px solid #f0f0f0;
   }
 
-ol > ul {
-    display: grid;
-    grid-auto-flow: column;
-    grid-template-rows: repeat(10, 0.1fr);
-}
- /* 
-#user-info-list {
-    padding-top: 50px;
-} */
